# terraform-aws-example-lambda-service

./: README.md  create-object.tf  get-object.tf  outputs.tf  s3.tf  variables.tf
.github/: dependabot.yml
.github/workflows/: pull-request.yml  push-main.yml
.github/workflows/assets/: trivy.yaml
functions/: README.md
functions/create-object/: pyproject.toml
functions/create-object/src/: lambda_handler.py
functions/create-object/tests/: conftest.py  lambda_handler_test.py
functions/get-object/: README.md  pyproject.toml
functions/get-object/src/: lambda_handler.py
functions/get-object/tests/: conftest.py  lambda_handler_test.py
