[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aws-lambda-powertools = "^2.43.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
black = "^24.8.0"
isort = "^5.13.2"
mypy = "^1.11.1"
moto = "^5.0.13"
boto3 = "^1.35.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
